<resources>
    <string name="hello_world">Hello world!</string>
    <string name="app_name">Yo+10</string>

    <string name="title_activity_editar_perfil">Editar Perfil</string>
    <string name="title_activity_partido">Invitacion a Partido</string>
    <string name="title_activity_create_notificacion">Nueva Notificacion</string>
    <string name="title_activity_perfil">Mi Perfil</string>
    <string name="title_activity_perfil_externo">Informacion del jugador</string>
    <string name="title_activity_splash">Yo+10</string>
    <string name="title_activity_invitacion_equipo">Invitacion Equipo</string>
    <string name="title_activity_equipo">Equipo</string>
    <string name="title_activity_crear_equipo">Crear Equipo</string>
    <string name="title_activity_amigos">Tus Amigos</string>
    <string name="title_activity_crear_partido">Crear un Partido</string>
    <string name="title_activity_seleccionar_amigos">Selecciona Tus Amigos</string>
    <string name="title_activity_partido_casual">Informacion del Partido</string>
    <string name="title_activity_amigos_n">Tus Amigos</string>
    <string name="title_activity_partido_por_equipos">Informacion del Partido</string>
    <string name="title_activity_invitacion_partido_casual">Invitacion a Partido</string>

    <string name="action_settings">Configuracion</string>
    <string name="app_id">pugXkDo33e0MsbWMTsL5EChTBx3jKyWoDYI6ZE40</string>
    <string name="client_key">rxxO31IwOiUHan1udkZjFwHgEIOJPI9zvPWGxm52</string>

    <string name="eSistemas">Sistemas</string>
    <string name="ePsicologia">Psicologia</string>
    <string name="eDiseno">Diseno</string>

    <string name="suscripcion">Se ha suscrito satisfactoriamente al canal </string>
    <string name="notificacion">Se ha mandado la notificación exitosamente</string>
    <string name="editado">Se ha editado satisfactoriamente el perfil</string>

    <string name="gameInvitation">Has sido invitado a un partido</string>
    <string name="teamInvitation">Has sido invitado a un equipo</string>

    <string name="newNotif">Nueva Notificación</string>
    <string name="editProfile">Editar Perfil</string>
    <string name="friends">Amigos</string>

    <string name="username">Usuario:</string>
    <string name="posicion">Posición:</string>
    <string name="about">Sobre mí:</string>
    <string name="email">Correo:</string>

    <string name="infoImagen">Imagen de perfil</string>
    <string name="selecImagen">Selecciona una imagen de perfil</string>

    <string name="save">Guardar</string>

    <string name="aceptar">Aceptar</string>
    <string name="rechazar">Rechazar</string>

    <string name="sinElementos">No hay elementos para mostrar</string>
    <string name="title_activity_main2">Yo+10</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
